diana_driver/DianaApi/include/DianaAPI.h

DIANA_API int setJointCollision(/*IN[7]*/ double *collision);
DIANA_API int setCartCollision(/*IN[6]*/ double *collision);
/*************************************** version 0.5 ***************************************/

DIANA_API int enterForceMode(/*[IN]*/ int intFrameType,
                             /*IN[16]*/ double *dblFrameMatrix,
                             /*IN[3]*/ double *dblForceDirection,
                             /*[IN]*/ double dblForceValue,
                             /*[IN]*/ double dblMaxApproachVelocity,
                             /*[IN]*/ double dblMaxAllowTcpOffset);
DIANA_API int leaveForceMode(/*IN*/ int intExitMode);
DIANA_API int setDefaultActiveTcpPose(/*IN[6]*/ double *arrPose);
DIANA_API int setResultantCollision(/*IN*/ double force);  //合力
DIANA_API int setJointImpedance(/*IN[7]*/ double *arrStiff, /*IN[7]*/ double *arrDamp);
DIANA_API int getJointImpedance(/*OUT[7]*/ double *arrStiff, /*OUT[7]*/ double *arrDamp);
DIANA_API int setCartImpedance(/*IN[6]*/ double *arrStiff, /*IN[6]*/ double *arrDamp);
DIANA_API int getCartImpedance(/*OUT[6]*/ double *arrStiff, /*OUT[6]*/ double *arrDamp);
/*************************************** version 2.2 ( version 0.6 ) ***************************************/

DIANA_API int zeroSpaceFreeDriving(/*IN*/ bool enable);
DIANA_API int createPath(/*IN*/ int type, /*OUT*/ unsigned int &id_path); /*1 for moveJ, 2 for moveL*/
DIANA_API int addMoveL(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel, /*IN*/ double acc,
                       /*IN*/ double blendradius);
DIANA_API int addMoveJ(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel_percent,
                       /*IN*/ double acc_percent, /*IN*/ double blendradius_percent);
DIANA_API int runPath(/*IN*/ unsigned int id_path);
DIANA_API int destroyPath(/*IN*/ unsigned int id_path);
/*************************************** version 0.7 ***************************************/

DIANA_API int rpy2Axis(/*IN[3]*/ double *arr);
DIANA_API int axis2RPY(/*IN[3]*/ double *arr);
DIANA_API int homogeneous2Pose(/*IN[16]*/ double *matrix, /*OUT[6]*/ double *pose);
DIANA_API int pose2Homogeneous(/*IN[6]*/ double *pose, /*OUT[16]*/ double *matrix);
DIANA_API int enableTorqueReceiver(/*bool*/ bool bEnable);
DIANA_API int sendTorque_rt(/*IN[7]*/ double *torque, /*IN*/ double t);
/*************************************** version 0.8 ***************************************/

DIANA_API int enableCollisionDetection(bool bEnable);
DIANA_API int setActiveTcpPayload(/*IN[10]*/ double *payload);
DIANA_API int servoJ(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain);
DIANA_API int servoL(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ double scale, /*IN*/ double *active_tcp = nullptr);
DIANA_API int servoJ_ex(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ bool realiable);